# akanda

./: .gitignore  .gitreview  AUTHORS  README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: developer_quickstart.rst  index.rst  operation.rst
docs/source/: appliance.rst  developer_quickstart.rst  index.rst  installing_akanda.rst  operation.rst  what_is_akanda.rst
specs/kilo/: ci-updates.rst  doc-updates.rst  drivers.rst
specs/liberty/: appliance_insance_pooling.py  appliance_instance_pooling.rst  appliance_vm_pooling.py  drivers.rst  rug_ha.rst  vm_reduce_fp.rst
